# oidpoc

./: README.md  pyproject.toml
oidpoc/: __main__.py
